fix scrollbar

--- a/devyour/src/index.css
+++ b/devyour/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color:#808080;
+        background:url("http://www.topdesignmag.com/wp-content/uploads/2010/12/137.jpg");
+}
